--- a/views/index.jade
+++ b/views/index.jade
@@ -2,12 +2,4 @@ extends layout
 
 block content
   h1 Welcome to my life
-  p Select your train below to see its current schedule.
-  #wrapper
-    #trainList
-      h2 Trains
-      #trains.d-flex.flex-row
-    #trainInfo
-      strong  <span id='trainName'></span>
-      #trainSchedule
-        strong Select a train to view its current schedule.
+  p Sara khanooooooooooooom khobi?
